<resources>

    <string name="app_name">Twixter</string>
    <string name="send_post">Send Post</string>
    <string name="cancel_post">Cancel</string>
    <string name="type_post">Type your post here</string>
    <string name="feed_button">Feed</string>
    <string name="post_button">Post</string>
    <string name="search_button">Search</string>
    <string name="dm_button">Direct Message</string>
    <string name="help_button">Help</string>
    <string name="sendSMS">sendSMS</string>
    <string name="about_app">What is Twixter?</string>
    <string name="how_to">How do I use it?</string>
    <string name="twixter_desc">Twixter is an app that allows you to interact with Twitter via text while giving the appearance that you\'re browsing normally. You can see how many texts you\'ve used today on the homepage.</string>
    <string name="how_to_use">Select the action you\'d like to take on the homepage. Type your tweet, message, or search keyword - then hit send. Twixter will send your message on your behalf. If you searched for a term or clicked on feed, you\'ll be able to see the tweets you requested.</string>
    <string name="title_activity_search_hashtag">SearchHashtagActivity</string>
    <string name="search_hash">Search</string>
    <string name="num_results">How many results do you want?</string>
    <string name="twitter_desc">Twitter is a popular social media app. Users can share their thoughts in \"tweets,\" or snippets of thoughts that are less than 140 characters. There are almost one billion accounts on Twitter, and many celebrities, public figures, experts and politicians are active Twitter users.</string>
    <string name="hash_desc">A hashtag is a label (usually in the form \"#popularTermHere\") that makes it easy for Twitter users to find tweets about popular topics in the world right now. These hashtags are embedded inside of tweets. Anyone can start a hashtag, and you can search for tweets that include a hashtag in the Search menu.</string>
    <string name="twilio_num">+17312567648</string>
    <string name="twitter_num">"40404"</string>
    <string name="twilio_message">Sent from your Twilio trial account - </string>
</resources>
