<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ian.twixter.MainActivity">

    <TextView
        android:id="@+id/msgToday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:padding="5dp"
        android:text="You have sent X messages today!"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/feedButton"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/msgToday"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:text="@string/feed_button"
        android:textSize="20sp" />

    <Button
        android:id="@+id/postButton"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/msgToday"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:text="@string/post_button"
        android:textSize="20sp" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_below="@id/feedButton"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:text="@string/search_button"
        android:textSize="20sp" />

    <Button
        android:id="@+id/dmButton"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/postButton"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:text="@string/dm_button"
        android:textSize="20sp" />

    <Button
        android:id="@+id/helpButton"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_below="@id/searchButton"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:text="@string/help_button"
        android:textSize="20sp" />

</RelativeLayout>
