<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ian.twixter.PostActivity">

    <EditText
        android:id="@+id/editPost"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="50dp"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:gravity="top|left"
        android:hint="@string/type_post" />

    <Button
        android:id="@+id/sendPost"
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:layout_alignLeft="@+id/editPost"
        android:layout_alignStart="@+id/editPost"
        android:layout_below="@+id/editPost"
        android:layout_marginLeft="25dp"
        android:text="@string/send_post" />

    <Button
        android:id="@+id/cancelPost"
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:layout_alignEnd="@+id/editPost"
        android:layout_alignRight="@+id/editPost"
        android:layout_below="@+id/editPost"
        android:layout_marginRight="25dp"
        android:text="@string/cancel_post" />

    <Button
        android:id="@+id/helpPost"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:text="Help"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="302dp"
        tools:layout_editor_absoluteY="513dp" />

    <TextView
        android:id="@+id/charCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cancelPost"
        android:layout_alignEnd="@+id/editPost"
        android:layout_alignRight="@+id/editPost"
        android:layout_marginBottom="11dp"
        android:text="0/140" />

</RelativeLayout>
